# video-killed-energy-budget

./: .gitignore  README.md  pyproject.toml  results.ipynb  text2video_energy_benchmark.csv
scripts/: animateDiff.py  animateDiff.slurm  animateDiff_native.py  cogX.py  cogX.slurm  cogX_native.py  contentV.py  contentV.slurm  contentV_native.py  cosmos.py  cosmos.slurm  cosmos_native.py  energy_theory_compute.py  ltx.py  ltx.slurm  ltx_native.py  mochi.py  mochi.slurm  mochi_native.py  prompts.json  wan2_1.py  wan2_1.slurm  wan2_1_frames.slurm  wan2_1_native.py  wan2_1_res.slurm  wan2_1_steps.slurm  wan2_1_text.slurm
